--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "gsap": "^3.10.2",
+    "history": "^5.3.0",
     "jquery": "^3.6.0",
     "pdf": "^0.1.0",
     "react": "^18.0.0",
