--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aframe": "^1.3.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "gsap": "^3.10.2",
     "history": "^5.3.0",
     "jquery": "^3.6.0",
+    "pannellum": "^2.5.6",
     "pdf": "^0.1.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
