--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hamiltondowdy.github.io/",
+  "homepage": "https://hamiltondowdy.github.io/dev-portfolio/",
   "name": "dev-portfolio",
   "version": "0.1.0",
   "private": true,
