--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
