--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.10.2",
     "history": "^5.3.0",
     "jquery": "^3.6.0",
+    "nodemon": "^2.0.15",
     "pannellum": "^2.5.6",
     "pdf": "^0.1.0",
     "react": "^18.0.0",
